add typescript, awesome-typescript-loader as devDependencies

--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
+    "awesome-typescript-loader": "^3.2.1",
     "html-webpack-plugin": "^2.29.0",
     "source-map-loader": "^0.2.1",
+    "typescript": "^2.4.1",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
   }
