--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
+    "@types/node": "^8.0.9",
     "awesome-typescript-loader": "^3.2.1",
     "css-loader": "^0.28.4",
     "html-webpack-plugin": "^2.29.0",
@@ -32,5 +33,8 @@
     "typescript": "^2.4.1",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
+  },
+  "repository": {
+    "url": "https://github.com/ronypur/react-webpack"
   }
 }
