--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   "author": "Rony Purwita",
   "license": "ISC",
   "dependencies": {
-    "@types/react": "^15.0.34",
+    "@types/react": "^15.0.36",
     "@types/react-dom": "^15.5.1",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
   },
   "devDependencies": {
     "@types/node": "^8.0.9",
@@ -31,7 +31,7 @@
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.18.2",
     "typescript": "^2.4.1",
-    "webpack": "^3.0.0",
+    "webpack": "^3.1.0",
     "webpack-dev-server": "^2.5.0"
   },
   "repository": {
