--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "cross-env NODE_ENV=development webpack-dev-server",
     "start:prod": "cross-env NODE_ENV=production webpack-dev-server",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.js --progress --profile --color",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:updateSnapshot" : "jest --updateSnapshot",
+    "tslint": "tslint --fix -c tslint.json 'src/**/*.{ts,tsx}'",
+    "tslint-init": "tslint --init"
   },
   "keywords": [
     "react",
@@ -25,13 +28,21 @@
     "uglify-js": "^3.0.24"
   },
   "devDependencies": {
+    "@types/isomorphic-fetch": "0.0.34",
+    "@types/jest": "^20.0.2",
     "@types/node": "^8.0.9",
+    "@types/react-test-renderer": "^15.5.1",
     "awesome-typescript-loader": "^3.2.1",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "html-webpack-plugin": "^2.29.0",
+    "isomorphic-fetch": "^2.2.1",
+    "jest": "^20.0.4",
+    "react-test-renderer": "^15.6.1",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.18.2",
+    "ts-jest": "^20.0.7",
+    "tslint": "^5.5.0",
     "typescript": "^2.4.1",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^3.1.0",
@@ -39,5 +50,19 @@
   },
   "repository": {
     "url": "https://github.com/ronypur/react-webpack"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(\/src\/)*.(test|spec).(ts|tsx)$",
+    "moduleNameMapper": {
+      "\\.(css|less|scss)$": "<rootDir>/src/__mocks__/styleMock.js"
+    }
   }
 }
