add sinon and @types/sinon as devDependencies

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/jest": "^20.0.2",
     "@types/node": "^8.0.9",
     "@types/react-test-renderer": "^15.5.1",
+    "@types/sinon": "^2.3.2",
     "awesome-typescript-loader": "^3.2.1",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
@@ -42,6 +43,7 @@
     "jest": "^20.0.4",
     "react-addons-test-utils": "^15.6.0",
     "react-test-renderer": "^15.6.1",
+    "sinon": "^2.3.8",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.18.2",
     "ts-jest": "^20.0.7",
