--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,11 @@
     "target": "es5",
     "sourceMap": true,
     "noImplicitAny": true,
-    "jsx": "react"
+    "jsx": "react",
+    "lib": [
+      "dom",
+      "es2015"
+    ]
   },
   "include": [
     "./src/**/*"
