--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "author": "Rony Purwita",
   "license": "ISC",
   "dependencies": {
+    "@types/lodash": "^4.14.69",
     "@types/react": "^15.0.36",
     "@types/react-dom": "^15.5.1",
+    "lodash": "^4.17.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "uglify-js": "^3.0.24"
