--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "html-webpack-plugin": "^2.29.0",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^20.0.4",
+    "postcss-loader": "^2.0.6",
     "react-addons-test-utils": "^15.6.0",
     "react-test-renderer": "^15.6.1",
     "sinon": "^2.3.8",
